--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "connected-react-router": "^6.9.1",
     "next": "10.1.3",
+    "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.14.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-admin": "^3.14.2",
+    "react-dom": "17.0.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.32.8"
   }
 }
